--- a/cornershop-backend-test/docker-compose.yml
+++ b/cornershop-backend-test/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - PYTHONDONTWRITEBYTECODE=1
       # forwarded from the host if they exist
       - UPDATE_PYTHON_REQUIREMENTS_ON_CONTAINERSTART
+    env_file:
+      - .env
     volumes:
       - .:/opt/cornershop/backend-test
     ports:
