--- a/cornershop-backend-test/requirements.txt
+++ b/cornershop-backend-test/requirements.txt
@@ -18,6 +18,7 @@ gunicorn==20.0.4
 isort==5.0.5
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+model-bakery==1.3.3
 more-itertools==8.4.0
 msgpack==0.6.2
 packaging==20.4
