--- a/cornershop-backend-test/requirements.txt
+++ b/cornershop-backend-test/requirements.txt
@@ -40,6 +40,7 @@ pytest-django==3.8.0
 pytest-flake8==1.0.6
 pytest-freezegun==0.4.1
 pytest-isort==1.1.0
+pytest-mock==3.6.1
 python-dateutil==2.8.1
 pytz==2020.1
 redis==3.5.3
